[package]
name = "choad"
version = "1.0.1"
edition = "2024"
authors = ["Astra1 <203369683+astra1-sh@users.noreply.github.com>"]
description = "Comically Hyper-Optimizing All Docs. Written in Rust, for developers who know milliseconds aren't free."


[dependencies]
clap = { version = "4.5.41" , features = ["derive"] }
notify = "8.0.0"
regex = "1.11.1"

[dev-dependencies]
tempfile = "3.20"
assert_fs = "1.1"
predicates = "3.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
